# django-busker

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  admin.py  apps.py  formatters.py  forms.py  models.py  runtests.py  setup.cfg  setup.py  urls.py  views.py
.github/: workflows
.github/workflows/: test.yml
busker/: admin.py  asgi.py  formatters.py  forms.py  manage.py  models.py  settings.py  signals.py  tests.py  urls.py  util.py  views.py  wsgi.py
busker/migrations/: 0002_auto_20200827_1402.py  0004_downloadcode_last_used_date.py  0008_remove_downloadablework_thumbnail.py  0009_auto_20200829_2024.py  0011_auto_20200905_2040.py  0012_auto_20200905_2042.py  0013_auto_20200906_1933.py
busker/static/busker/css/: busker.css
busker/templates/busker/: base.html  confirm_form.html  error.html  file_list.html
busker/tests/: test_admin.py  test_forms.py  test_tests.py  test_util.py  test_views.py
migrations/: 0001_initial.py  0003_auto_20200827_1424.py  0005_auto_20200829_1433.py  0006_auto_20200829_1815.py  0007_downloadablework_thumbnail.py  0010_auto_20200829_2037.py
static/busker/css/: busker.css
templates/busker/: base.html  confirm_form.html  file_list.html  redeem.html  redeem_form.html
tests/: .coveragerc  busker_test_settings.py  test_admin.py  test_formatters.py  test_signals.py  test_tests.py  test_util.py  test_views.py  urls.py
