[metadata]
name = django-busker
version = 0.7.1
description = A Django app to manage download codes for digital assets.
long_description = file: README.rst
url = https://github.com/tinpan-io/django-busker
author = Andy Chase
author_email = andychase@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.x
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Multimedia

[options]
include_package_data = true
packages = find:

[coverage:run]
source = .
branch = True
plugins =
    django_coverage_plugin

[coverage:report]
fail_under = 100
show_missing = True
skip_covered = True
